--- a/style.css
+++ b/style.css
@@ -16,9 +16,7 @@
 
 html, body
 {
-    background-image: url(/img/i5-loja-0000-scaled.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-color: black;
 }
 header
 {
@@ -133,7 +131,7 @@ nav a {
     display: flex;
     flex-direction: column;
     align-items: normal;
-    border-radius: 0 0 8px 8px;
+    border-radius: 8px 8px 8px 8px;
 
 
 }
