--- a/style.css
+++ b/style.css
@@ -16,7 +16,9 @@
 
 html, body
 {
-    background-color: black;
+    background-image: url(/img/i5-loja-0000-scaled.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 header
 {
