--- a/style.css
+++ b/style.css
@@ -16,9 +16,7 @@
 
 html, body
 {
-    background-image: url(/img/i5-loja-0000-scaled.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-color:black;
 }
 header
 {
